--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 .btn-primary {
     background-color: #FD6E0A;
-    padding:  15px 35px;
+    padding: 15px 35px;
     font-weight: 700;
     color: white;
     border-radius: 5px;
@@ -26,6 +26,7 @@ nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin: 0 200px;
 }
 
 nav>ul {
@@ -50,4 +51,13 @@ nav a {
     font-size: 45px;
     font-weight: 800;
 
+}
+
+.header{
+    background-color: #FFF8F3;
+
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
 }
