--- a/style.css
+++ b/style.css
@@ -1,28 +1,29 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: ;
+    padding: ;
 }
-
+/* common shared styles */
 body {
     font-family: 'Open Sans', sans-serif;
 }
 
-/* nav related style  */
-.primary-color {
+.text-primary {
     color: #FD6E0A;
 }
 
 .btn-primary {
     background-color: #FD6E0A;
+    font-size: 20px;
     padding: 15px 35px;
     font-weight: 700;
     color: white;
     border-radius: 5px;
-    border: none;
+    border: 0;
     cursor: pointer;
-
+    
 }
 
+/* nav related style  */
 nav {
     display: flex;
     justify-content: space-around;
@@ -33,6 +34,7 @@ nav {
 nav>ul {
     display: flex;
     align-items: center;
+    
 
 }
 
@@ -41,11 +43,17 @@ nav li {
     margin-right: 50px;
 
 }
-
 nav a {
     text-decoration: none;
-    color: gray
+    color: #474747;
 }
+.nav-title {
+    color: black;
+    font-size: 45px;
+    font-weight: 800;
+
+}
+
 
 /* header related style  */
 .header {
@@ -62,12 +70,6 @@ nav a {
 
 .banner-content {}
 
-.banner-title {
-    color: black;
-    font-size: 45px;
-    font-weight: 800;
-
-}
 
 .banner-profile-pic {
     width: 500px;
