--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: ;
     padding: ;
 }
+
 /* common shared styles */
 body {
     font-family: 'Open Sans', sans-serif;
@@ -20,7 +21,7 @@ body {
     border-radius: 5px;
     border: 0;
     cursor: pointer;
-    
+
 }
 
 /* nav related style  */
@@ -34,7 +35,7 @@ nav {
 nav>ul {
     display: flex;
     align-items: center;
-    
+
 
 }
 
@@ -43,10 +44,12 @@ nav li {
     margin-right: 50px;
 
 }
+
 nav a {
     text-decoration: none;
     color: #474747;
 }
+
 .nav-title {
     color: black;
     font-size: 45px;
@@ -58,19 +61,67 @@ nav a {
 /* header related style  */
 .header {
     background-color: #FFF8F3;
+    background-image: url(images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
 
 }
 
 .banner {
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
-
+    justify-content: space-between;
 }
 
-.banner-content {}
+.banner-content {
+    max-width: 500px;
+    
+}
 
+.banner-greeting {
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+
+.banner-title {
+    font-size: 84px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+
+}
+.banner-description{
+     
+}
 
 .banner-profile-pic {
     width: 500px;
+}
+
+/* main section styles */
+
+
+/* about common styles  */
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+
+}
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    margin: ;
+}
+
+
+/* about section styles */
+.about{
+    padding: 130px;
+    background-color: #FFF8F3;
+    margin: 130px 0;
 }
