--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ nav a {
 
 .banner-content {
     max-width: 500px;
-    
+
 }
 
 .banner-greeting {
@@ -92,29 +92,32 @@ nav a {
     margin-bottom: 20px;
 
 }
-.banner-description{
-     
-}
+
+.banner-description {}
 
 .banner-profile-pic {
     width: 500px;
 }
 
 /* main section styles */
-main{
+main {
     max-width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin-top: 100px;
+}
 
 /* about common styles  */
-.section-title{
+.section-title {
     color: #181818;
     text-align: center;
     font-size: 35px;
     font-weight: 700;
 
 }
-.section-description{
+
+.section-description {
     color: #757575;
     text-align: center;
     font-size: 18px;
@@ -123,24 +126,62 @@ main{
 
 
 /* about section styles */
-.about{
+.about {
     padding: 130px;
     background-color: #FFF8F3;
     margin: 130px 0;
 }
 
-.about-info-container{
+.about-info-container {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    
-}
-.about-info{
-text-align: center;
-}
-.info-title{
 
 }
-.info-description{
 
+.about-info {
+    text-align: center;
+}
+
+.info-title {}
+
+.info-description {}
+
+/* what i do section styles  */
+#what-i-do-section {
+    padding: 30px 150px;
+}
+
+.skills-container {
+    display: flex;
+    gap: 15px;
+
+}
+
+.skill-box {
+    border: 0;
+    border-radius: 15px;
+    box-shadow: 0px 0px 10px .05px rgb(184, 179, 179);
+    padding: 38px;
+
+}
+
+.skill-title {
+    font-weight: 700;
+}
+
+.skill-description {
+    color: gray;
+}
+
+/* Resume section styles */
+
+.resume-container{
+    display: flex;
+    padding: 30px 0px;;
+    gap: 20px;
+}
+.resume-column-items{
+    border-bottom: 1px solid rgb(223, 211, 211);
+    padding-right: 110px ;
 }
