--- a/style.css
+++ b/style.css
@@ -147,21 +147,21 @@ main section{
 
 .info-description {}
 
-/* what i do section styles  */
+/* what i do related section styles  */
 #what-i-do-section {
     padding: 30px 150px;
 }
 
 .skills-container {
     display: flex;
-    gap: 15px;
-
+    gap: 24px;
+    
 }
 
 .skill-box {
     border: 0;
     border-radius: 15px;
-    box-shadow: 0px 0px 10px .05px rgb(184, 179, 179);
+    box-shadow: 0px 0px 10px .05px rgb(228, 224, 224);
     padding: 38px;
 
 }
@@ -173,6 +173,8 @@ main section{
 .skill-description {
     color: gray;
 }
+
+
 
 /* Resume section styles */
 
