--- a/style.css
+++ b/style.css
@@ -217,3 +217,11 @@ margin-top: 0;
     text-align: center;
     margin-top: 50px;
 }
+
+/* footer styles */
+footer{
+    display: flex;
+    color: #FFF8F3;
+    padding: 130px 200px;
+    margin-top: 100px;
+}
