--- a/style.css
+++ b/style.css
@@ -227,13 +227,14 @@ margin-top: 0;
     margin-top: 100px;
     padding: 130px 200px;
     background-color:#fffaf7;
-    justify-content: space-around;
+    gap: 100px;
 
 }
 
 
 .footer-column{
     width: 50%;
+    
 
 }
 
